# aulearn26_assignments-group_j

./: .gitignore  README.md  download_sc2.sh  pyproject.toml  run_ql.py  run_simple_mtb_discrete_env.py
.devcontainer/: Dockerfile  devcontainer.json
agents/: abstractAgent.py  basicAgent.py  dqnAgent.py  qlAgent.py  randomAgent.py  sarsaAgent.py
env/: move_to_beacon_discrete_env.py  move_to_beacon_full_env.py  utils.py
models/QLearningAgent/MoveToBeaconDiscreteEnv/: 260511_2133_QLearningAgent_MoveToBeaconDiscreteEnv.pkl  260512_1254_QLearningAgent_MoveToBeaconDiscreteEnv  260512_1257_QLearningAgent_MoveToBeaconDiscreteEnv.pkl  260512_1300_QLearningAgent_MoveToBeaconDiscreteEnv.pkl  260512_1403_QLearningAgent_MoveToBeaconDiscreteEnv.pkl  260512_1810_QLearningAgent_MoveToBeaconDiscreteEnv.pkl  260512_1822_QLearningAgent_MoveToBeaconDiscreteEnv.pkl  260512_1829_QLearningAgent_MoveToBeaconDiscreteEnv.pkl  260512_1927_QLearningAgent_MoveToBeaconDiscreteEnv.pkl  260512_2015_QLearningAgent_MoveToBeaconDiscreteEnv.pkl  260512_2047_QLearningAgent_MoveToBeaconDiscreteEnv.pkl  260512_2056_QLearningAgent_MoveToBeaconDiscreteEnv.pkl  260512_2117_QLearningAgent_MoveToBeaconDiscreteEnv.pkl  260512_2147_QLearningAgent_MoveToBeaconDiscreteEnv.pkl  260512_2156_QLearningAgent_MoveToBeaconDiscreteEnv.pkl  260512_2203_QLearningAgent_MoveToBeaconDiscreteEnv.pkl  260512_2209_QLearningAgent_MoveToBeaconDiscreteEnv.pkl  260512_2217_QLearningAgent_MoveToBeaconDiscreteEnv.pkl
models/SARSAAgent/MoveToBeaconDiscreteEnv/: 260512_1512_SARSAAgent_MoveToBeaconDiscreteEnv.pkl  (+5 more)
runner/: runner.py
(+38 files in other folders)
