[project]
name = "aulearn26"
version = "1.0.1"
requires-python = ">=3.11.8,<3.12"
description = "Python uv Environment for Autonomous Learning course in 2026 from INS, CAU Kiel"
authors = ["Nikita Smirnov <nsm@informatik.uni-kiel.de>", "Connor Schönberner <cos@informatik.uni-kiel.de>", "Tim Lukas Harken <stu203399@mail.uni-kiel.de>"]

dependencies = [
    "pysc2 @ git+https://github.com/TiLuHa/pysc2.git@webserver",
    "numpy",
    "pandas",
    "gymnasium",
    "scikit-learn",
    "seaborn",
    "matplotlib",
    "tensorboard",
    "torch-tb-profiler",
    "absl-py",
    "torch",
    "tensordict"
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'win32'" }
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
